# TopasOptim

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/topasoptim/: OptimizerModel.py  TopasGUI.py  TopasModel.py  __init__.py  dpg_gui.py  imgui_dataviews.py  imgui_gui.py
tests/: test_package.py  test_topas.py
